--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -39,7 +39,7 @@ bind "x"                            "radio2"
 bind "y"                            "messagemode"
 bind "l"                            "say EZ"
 bind "z"                            "radio1"
-bind "-"                            "toggleconsole"
+bind "`"                            "toggleconsole"
 bind "."                            "demoui"
 bind ","                            "say you guys are trash"
 bind "SPACE"                        "+jump"
@@ -57,7 +57,7 @@ bind "leftarrow"                    "volume .45"
 bind "rightarrow"                   "volume .35"
 bind "uparrow"                      "voice_enable 1"
 bind "downarrow"                    "voice_enable 0"
-bind "Shift"			            "+sprint"
+bind "Shift"			                     "+sprint"
 bind "MOUSE_X" "yaw"
 bind "MOUSE_Y" "pitch"
  
@@ -96,7 +96,7 @@ cl_resend                           "6"
 cl_timeout                          "1337"
 cl_use_opens_buy_menu               "0"
 fps_max                             "0"
-fps_max_menu                        "120"
+fps_max_menu                        "144"
 muzzleflash_light                   "1"
 cl_freezecampanel_position_dynamic  "0"
 cl_teamid_overhead_always           "1"
