--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -121,9 +121,7 @@ m_yaw "0.022"
 zoom_sensitivity_ratio_mouse        "0.9"
  
 //HUD
-net_graph                           "1"
-net_graphproportionalfont           "1"
-cl_showfps                          "0"
+cq_netgraph                         "1"
 hud_scaling                         "1"
 cl_radar_rotate                     "1"
 cl_radar_icon_scale_min             "1"
