--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -122,6 +122,7 @@ zoom_sensitivity_ratio_mouse        "0.9"
  
 //HUD
 cq_netgraph                         "1"
+cl_showfps                          "3"
 hud_scaling                         "1"
 cl_radar_rotate                     "1"
 cl_radar_icon_scale_min             "1"
